[project]
name = "my_project"
version = "0.1.0"
dependencies = ["otree<6", "black==21.11b1"]
requires-python = ">=3.10"

[dependency-groups]
dev = [
    "isort==7.0.0",
    "pre-commit==4.5.1",
    "ruff==0.15.1",
]

[tool.black]
target-version = ["py310"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.ruff]
exclude = [".git", "__pycache__", ".venv", "venv"]

[tool.ruff.lint]
ignore = ["F403", "F405"]
